# az_sovereign_keystore

./: Cargo.toml  README.md
sk_client/: Cargo.toml
sk_server/: Cargo.toml
sk_server/src/: handlers.rs  main.rs  managed_id.rs  obfuscate.rs  obfusicate.rs
sk_server/src/handlers/: get_secret.rs  mod.rs  set_secret.rs
src/: handlers.rs  main.rs
