[package]
name = "az_sovereign_keystore"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
axum = "0.8.8"
azure_core = "0.33.0"
azure_identity = "0.33.0"
azure_security_keyvault_secrets = "0.12.0"
base64 = "0.22.1"
help = "0.0.0"
serde = "1.0.228"
tokio = "1.51.0"
